# MirrorUS

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
src/logic/: angles.py  depth_detector.py  filters.py  pose_detector.py  squat_analyzer.py  squat_counter.py  torso_detector.py  valgus_detector.py
src/ui/: components.py
tests/: test_infrastructure.py
tests/logic/: test_angles.py  test_depth_detector.py  test_filters.py  test_pose_detector.py  test_squat_analyzer.py  test_squat_counter.py  test_torso_detector.py  test_valgus_detector.py
tests/ui/: test_components.py
