[tool.poetry]
name = "mirrorus"
version = "0.1.0"
description = "TFG Pose Tracking"
authors = ["Francisco de Castro Mañas <frademann@alum.us.es>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = ">=1.30.0"
mediapipe = "0.10.14"
opencv-python = ">=4.8.0"
numpy = "<2.0.0"
protobuf = ">=4.25.3,<5"
av = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
