[tool.poetry]
name = "mirrorus"
version = "0.1.0"
description = "TFG Pose Tracking"
authors = ["Francisco de Castro Mañas <frademann@alum.us.es>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = ">=1.35.0"
mediapipe = "0.10.14"
opencv-python-headless = "<4.10.0"
numpy = "<2.0.0"
protobuf = ">=4.25.3,<5"
av = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-sugar = "^1.0.0"
pre-commit = "^3.6.0"
black = "^24.0.0"
flake8 = "^7.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
